--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
     "@headlessui/react": "^2.2.7",
     "@radix-ui/react-popover": "^1.1.15",
     "class-variance-authority": "^0.7.1",
@@ -20,6 +22,7 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-share-icons": "^1.1.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
